# mostlyai-mcp-server

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
mostlyai/mcp/: keycloak.py  logger.py  logging.py  prometheus_utils.py  server.py  utils.py
tests/unit/: test_server.py
